--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -26,7 +26,7 @@
                 <owl-carousel-o [options]="customOptions">
                   <ng-container *ngFor="let item of product?.productImages ;  let i = index ;">
                     <ng-template carouselSlide [id]="item.id.toString()">
-                      <li><a [href]='urlImg + item.imageUrl' class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: '{{urlImg + item.imageUrl}}' "><img [src]="urlImg + item.imageUrl" alt = "Thumbnail 2"/></a></li>
+                      <li><a (click)="changeImageLarge(item.id)" class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: '{{urlImg + item.imageUrl}}' "><img [src]="urlImg + item.imageUrl" alt = "Thumbnail 2"/></a></li>
                     </ng-template>
                   </ng-container>
                 </owl-carousel-o>
@@ -55,52 +55,25 @@
               <div class="short-description">
                 <h2>Mô tả</h2>
                 <div [innerHTML]="htmlContent"></div>
-              </div>
-              <div class="product-color-size-area">
-                <!-- <div class="color-area">
-                  <h2 class="saider-bar-title">Color</h2>
-                  <div class="color">
-                    <ul>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                      <li><a href="#"></a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="size-area">
-                  <h2 class="saider-bar-title">Size</h2>
-                  <div class="size">
-                    <ul>
-                      <li><a href="#">S</a></li>
-                      <li><a href="#">L</a></li>
-                      <li><a href="#">M</a></li>
-                      <li><a href="#">XL</a></li>
-                      <li><a href="#">XXL</a></li>
-                    </ul>
-                  </div>
-                </div> -->
-              </div>
+              </div> 
               <div class="product-variation">
                 <form action="#" method="post">
                   <div class="cart-plus-minus">
                     <label for="qty">Số lượng:</label>
                     <div class="numbers-row">
                       <div (click)="decreaseQuantity()" class="dec qtybutton"><i class="fa fa-minus">&nbsp;</i></div>
-                      <input type="text" class="qty" [(ngModel)]="quantity" title="Qty" value="1" maxlength="12" id="qty" name="qty">
+                      <input type="text" class="qty" [(ngModel)]="quantity" title="number" min="1" value="1" maxlength="12" id="qty" name="qty">
                       <div (click)="increaseQuantity()" class="inc qtybutton"><i class="fa fa-plus">&nbsp;</i></div>
                     </div>
                   </div>
-                  <button class="button pro-add-to-cart" title="Thêm vào giỏ" type="button"><span><i class="fa fa-shopping-basket"></i> Thêm vào giỏ</span></button>
+                  <button (click)="addToShopingCard(product)" class="button pro-add-to-cart" title="Thêm vào giỏ" type="button"><span><i class="fa fa-shopping-basket"></i> Thêm vào giỏ</span></button>
                 </form>
               </div>
               <div class="product-cart-option">
                 <ul>
                   <li><a href="#"><i class="fa fa-heart-o"></i><span>Thêm vào yêu thích</span></a></li>
-                  <li><a href="#"><i class="fa fa-link"></i><span>Đối chiếu</span></a></li>
-                  <li><a href="#"><i class="fa fa-envelope"></i><span>Email to a Friend</span></a></li>
+                  <!-- <li><a href="#"><i class="fa fa-link"></i><span>Đối chiếu</span></a></li>
+                  <li><a href="#"><i class="fa fa-envelope"></i><span>Email to a Friend</span></a></li> -->
                 </ul>
               </div>
             </div>
@@ -275,25 +248,8 @@
                     </div>
                   </li>
                 </ng-container>
-                
-                <!-- <li class="item">
-                  <div class="products-block-left"> <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: product?.productNameSlug}" title="Sample Product" class="product-image"><img src="./../assets/images/products/product-1.jpg" alt="Sample Product "></a></div>
-                  <div class="products-block-right">
-                    <p class="product-name"> <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: product?.productNameSlug}">Consectetur utes anet adipisicing elit</a> </p>
-                    <span class="price">$89.99</span>
-                    <div class="rating"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> </div>
-                  </div>
-                </li>
-                <li class="item">
-                  <div class="products-block-left"> <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: product?.productNameSlug}" title="Sample Product" class="product-image"><img src="./../assets/images/products/product-1.jpg" alt="Sample Product "></a></div>
-                  <div class="products-block-right">
-                    <p class="product-name"> <a [routerLink]="['/chi-tiet']" [queryParams]="{slug: product?.productNameSlug}">Consectetur utes anet adipisicing elit</a> </p>
-                    <span class="price">$99.99</span>
-                    <div class="rating"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> </div>
-                  </div>
-                </li> -->
               </ul>
-              <a class="link-all" href="shop_grid.html">All Products</a> </div>
+              <a class="link-all" [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{typeStatus: 1}">Xem thêm</a> </div>
           </div>
           <div class="block popular-tags-area ">
             <div class="sidebar-bar-title">
@@ -301,7 +257,7 @@
             </div>
             <div class="tag">
               <ul >
-                <li *ngFor="let item of product?.productTags"><a href="#">{{item}}</a></li>
+                <li *ngFor="let item of product?.productTags"><a [routerLink]="['/danh-muc-san-pham-g']" [queryParams]="{searchKey: item}">{{item}}</a></li>
               </ul>
             </div>
           </div>
