--- a/src/app/quick-view/quick-view.component.html
+++ b/src/app/quick-view/quick-view.component.html
@@ -1,53 +1,47 @@
-<div id="quick_view_popup-overlay" (click)="handleClickCloseModal($event)"></div>
-<div style="display: block;" id="quick_view_popup-wrap" (click)="handleClickCloseModal($event)">
+<div *ngIf="product">
+<div id="quick_view_popup-overlay" (click)="handleClickCloseModal($event, false)" ></div>
+<div style="display: block;" id="quick_view_popup-wrap" (click)="handleClickCloseModal($event, true)" >
   <div id="quick_view_popup-outer">
-    <div id="quick_view_popup-content">
+    <div id="quick_view_popup-content" (click)="handleClickCloseModal($event, true)">
       <!-- style="width:auto;height:auto;overflow: auto;position:relative;" -->
-      <div *ngIf="product">
+      <div style="width:auto;height:auto;overflow: auto;position:relative;" >
         <div class="product-view-area">
           <div class="product-big-image col-xs-12 col-sm-5 col-lg-5 col-md-5">
             <div class="icon-sale-label sale-left">Sale</div>
-            <div class="large-image"> <a href="./../assets/images/products/product-1.jpg" class="cloud-zoom" id="zoom1" rel="useWrapper: false, adjustY:0, adjustX:20"> <img class="zoom-img" src="./../assets/images/products/product-1.jpg"> </a> </div> 
+            <div class="large-image"> <a [href]="urlImg + imgfirst" class="cloud-zoom" id="zoom1" rel="useWrapper: false, adjustY:0, adjustX:20"> <img class="zoom-img" [src]="urlImg + imgfirst" alt="products"> </a> </div>
             <div class="flexslider flexslider-thumb">
-            <owl-carousel-o [options]="customOptions">
-              <ng-container>
-                <ng-template carouselSlide class="previews-list slides">
-                <li><a href='./../assets/images/products/product-1.jpg' class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: './../assets/images/products/product-1.jpg' "><img src="./../assets/images/products/product-1.jpg" alt = "Thumbnail 2"/></a></li>
-                </ng-template>
-                <ng-template carouselSlide class="previews-list slides">
-                <li><a href='./../assets/images/products/product-1.jpg' class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: './../assets/images/products/product-1.jpg' "><img src="./../assets/images/products/product-1.jpg" alt = "Thumbnail 2"/></a></li>
-                </ng-template>
-                <ng-template carouselSlide class="previews-list slides">
-                <li><a href='./../assets/images/products/product-1.jpg' class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: './../assets/images/products/product-1.jpg' "><img src="./../assets/images/products/product-1.jpg" alt = "Thumbnail 2"/></a></li>
-                </ng-template>
-                <ng-template carouselSlide class="previews-list slides">
-                  <li><a href='./../assets/images/products/product-1.jpg' class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: './../assets/images/products/product-1.jpg' "><img src="./../assets/images/products/product-1.jpg" alt = "Thumbnail 2"/></a></li>
-                </ng-template>
-                <ng-template carouselSlide class="previews-list slides">
-                  <li><a href='./../assets/images/products/product-1.jpg' class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: './../assets/images/products/product-1.jpg' "><img src="./../assets/images/products/product-1.jpg" alt = "Thumbnail 2"/></a></li>
-                </ng-template>
-              </ng-container>
-            </owl-carousel-o>
+              <owl-carousel-o [options]="customOptions">
+                <ng-container *ngFor="let item of product?.productImages ;  let i = index ;">
+                  <ng-template carouselSlide [id]="item.id.toString()">
+                    <li><a  (click)="changeImageLarge(item.id)" class='cloud-zoom-gallery' rel="useZoom: 'zoom1', smallImage: '{{urlImg + item.imageUrl}}' "><img [src]="urlImg + item.imageUrl" alt = "Thumbnail 2"/></a></li>
+                  </ng-template>
+                </ng-container>
+              </owl-carousel-o>
             </div>
             <!-- end: more-./../assets/images --> 
             
           </div>
-          <div *ng class="col-xs-12 col-sm-7 col-lg-7 col-md-7">
+          <div class="col-xs-12 col-sm-7 col-lg-7 col-md-7">
             <div class="product-details-area">
               <div class="product-name">
                 <h1>{{product.productName}}</h1>
               </div>
               <div class="price-box">
-                <p class="special-price"> <span class="price-label">Special Price</span> <span class="price"> $329.99 </span> </p>
-                <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price"> $359.99 </span> </p>
+                <p class="special-price"> <span class="price-label">Special Price</span> <span class="price"> {{product?.promotionPrice | currency: "VND"}} </span> </p>
+                <p class="old-price"> <span class="price-label">Regular Price:</span> <span class="price"> {{product?.price | currency: "VND"}}  </span> </p>
               </div>
               <div class="ratings">
-                <div class="rating"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> </div>
-                <p class="availability in-stock pull-right">Availability: <span>In Stock</span></p>
+                <div class="rating">
+                  <ng-container *ngIf="product?.rate >= 0">
+                    <i class="fa fa-star" *ngFor="let rate of counterRate(product?.rate)"></i>
+                    <i class="fa fa-star-o" *ngFor="let rate of counterRate(5 - product?.rate)"></i>
+                  </ng-container>
+                </div>
+                <p class="availability in-stock pull-right" *ngIf="product?.guarantee > 0">Bảo hành: <span>{{product.guarantee}} tháng</span></p>
               </div>
               <div class="short-description">
-                <h2>Quick Overview</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam fringilla augue nec est tristique auctor. Donec non est at libero vulputate rutrum. </p>
+                <!-- <h2>Quick Overview</h2> -->
+                <p [innerHTML]="product.content"> </p>
               </div>          
               <div class="product-variation">
                 <form action="#" method="post">
@@ -55,17 +49,17 @@
                     <label for="qty">Quantity:</label>
                     <div class="numbers-row">
                       <div (click)="decreaseQuantity()"  class="dec qtybutton"><i class="fa fa-minus">&nbsp;</i></div>
-                      <input type="text" class="qty" title="Qty" [(ngModel)]="quantity" value="1" maxlength="12" id="qty" name="qty">
+                      <input type="number" class="qty" title="Qty" [(ngModel)]="quantity" value="1" min="1" maxlength="12" id="qty" name="qty">
                       <div (click)="increaseQuantity()" class="inc qtybutton"><i class="fa fa-plus">&nbsp;</i></div>
                     </div>
                   </div>
-                  <button class="button pro-add-to-cart" title="Add to Cart" type="button"><span><i class="fa fa-shopping-basket"></i> Add to Cart</span></button>
+                  <button (click)="addToShopingCard(product)" class="button pro-add-to-cart" title="Add to Cart" type="button"><span><i class="fa fa-shopping-basket"></i> GIỎ HÀNG</span></button>
                 </form>
               </div>
               <div class="product-cart-option">
                 <ul>
-                  <li><a href="#"><i class="fa fa-heart"></i><span>Add to Wishlist</span></a></li>
-                  <li><a href="#"><i class="fa fa-retweet"></i><span>Add to Compare</span></a></li>
+                  <li><a href="#"><i class="fa fa-heart"></i><span>Thêm vào yêu thích</span></a></li>
+                  <!-- <li><a href="#"><i class="fa fa-retweet"></i><span>Add to Compare</span></a></li> -->
                 </ul>
               </div>
             </div>
@@ -75,5 +69,6 @@
         
       </div>
     </div>
-<a style="display: inline;" (click)="handleClickCloseModal($event)" id="quick_view_popup-close" href="#"><i class="icon pe-7s-close"></i></a> 
+<a style="display: inline;" (click)="handleClickCloseModal($event, false)" id="quick_view_popup-close" href="#"><i class="icon pe-7s-close"></i></a> 
+</div>
 </div>
