--- a/src/assets/css/quick_view_popup.css
+++ b/src/assets/css/quick_view_popup.css
@@ -9,13 +9,14 @@
 }
 #quick_view_popup-wrap {
 	position: fixed;
-	top: 25%;
-	left: 0;
+	top: 50%;
+	left: 50%;
 	z-index: 1101;
 	outline: none;
 	display: none;
 	width: auto;
 	right: 0px;
+	transform: translate(-50%, -50%);
 }
 #quick_view_popup-outer {
 	position: relative;
