--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4018,7 +4018,7 @@ html {
 }
 .mobile-menu li {
 	display: block;
-	border-top: 1px solid #cb2d22;
+	border-top: 1px solid #fff;
 	width: 100%;
 	float: left;
 	margin-left: 0;
