--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -317,7 +317,7 @@
                                     </div>
                                   </div>
                                   <div class="pro-action">
-                                    <button type="button" class="add-to-cart"><span> Add to Cart</span> </button>
+                                    <button type="button" class="add-to-cart"><span> Giỏ hàng</span> </button>
                                   </div>
                                 </div>
                               </div>
