--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -72,7 +72,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
+                                <div class="mt-button add_to_wishlist"> <a (click)="addToFavorite(item)"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div> -->
@@ -157,7 +157,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
+                                <div class="mt-button add_to_wishlist"> <a (click)="addToFavorite(item)"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div> -->
@@ -245,7 +245,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
+                                <div class="mt-button add_to_wishlist"> <a (click)="addToFavorite(item)"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div> -->
@@ -339,7 +339,7 @@
                               </a> </div>
                             <div class="pr-info-area">
                               <div class="pr-button">
-                                <div class="mt-button add_to_wishlist"> <a [routerLink]="['/danh-sach-yeu-thich']"> <i
+                                <div class="mt-button add_to_wishlist"> <a (click)="addToFavorite(item)"> <i
                                       class="fa fa-heart-o"></i> </a> </div>
                                 <!-- <div class="mt-button add_to_compare"> <a routerLink="/so-sanh"> <i
                                       class="fa fa-link"></i> </a> </div> -->
