--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -432,7 +432,7 @@
                 <owl-carousel-o [options]="customBrand">
                   <ng-container *ngFor="let item of listTrademark">
                     <ng-template carouselSlide [id]="item.id.toString()">
-                      <div class="item"><a href="#"><img [src]="urlImg + item.imageUrl" alt="Image"></a> </div>
+                      <div class="item"><a href="{{this.baseUrl + item.url}}"><img [src]="urlImg + item.imageUrl" alt="Image"></a> </div>
                     </ng-template>
                   </ng-container>
                 </owl-carousel-o>
