--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -161,135 +161,52 @@
               <div class="mt-root-item">
                 <div class="title title_font"><span class="title-text">Bán chạy nhất</span></div>
               </div>
-              <ul class="menu-items col-xs-12">
-                <li class="menu-item depth-1 product menucol-1-3 withimage">
-                  <div class="product-item">
+              <ul class="menu-items col-xs-12" *ngIf="this.productSale">
+                <li *ngFor="let item of productSale.data; let i=  index" class="menu-item depth-1 product menucol-1-3 withimage">
+                  <div class="product-item" *ngIf="i < 3">
                     <div class="item-inner">
                       <div class="product-thumbnail">
                         <div class="icon-sale-label sale-left">Sale</div>
                         <div class="pr-img-area"> <a title="Product title here" [routerLink]="['/chi-tiet']">
-                            <figure> <img class="first-img" src="./../assets/images/products/product-1.jpg"
-                                alt="html theme"> <img class="hover-img" src="./../assets/images/products/product-1.jpg"
-                                alt="html Template"></figure>
+                            <figure> <img class="first-img" [src]="urlImage + item.imageUrl"
+                                alt="{{item.productName}}"> <img class="hover-img" [src]="urlImage + item.imageUrl"
+                                alt="{{item.productName}}"></figure>
                           </a> </div>
                         <div class="pr-info-area">
                           <div class="pr-button">
-                            <div class="mt-button add_to_wishlist"> <a href="wishlist.html"> <i class="fa fa-heart"></i>
+                            <div class="mt-button add_to_wishlist"> <a (click)="addToFavorite(item)"> <i class="fa fa-heart"></i>
                               </a> </div>
-                            <div class="mt-button add_to_compare"> <a href="compare.html"> <i class="fa fa-signal"></i>
-                              </a> </div>
-                            <div class="mt-button quick-view"> <a href="quick_view.html"> <i class="fa fa-search"></i>
+                            <!-- <div class="mt-button add_to_compare"> <a href="compare.html"> <i class="fa fa-signal"></i>
+                              </a> </div> -->
+                            <div class="mt-button quick-view"> <a (click)="openModalQuickView(item)"> <i class="fa fa-search"></i>
                               </a> </div>
                           </div>
                         </div>
                       </div>
                       <div class="item-info">
                         <div class="info-inner">
-                          <div class="item-title"> <a title="Product title here" [routerLink]="['/chi-tiet']">Product
-                              title here </a> </div>
+                          <div class="item-title"> <a title="{{item.productName}}" [routerLink]="['/chi-tiet']">{{item.productName}} </a> </div>
                           <div class="item-content">
-                            <div class="rating"> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i
-                                class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i>
+                            <div class="rating"> 
+                              <!-- Tạo sao đánh giá -->
+                              <ng-container *ngIf="item.rate >= 0">
+                                <i class="fa fa-star" *ngFor="let rate of counterRate(item.rate)"></i>
+                                <i class="fa fa-star-o" *ngFor="let rate of counterRate(5 - item.rate)"></i>
+                              </ng-container>
                             </div>
                             <div class="item-price">
-                              <div class="price-box"> <span class="regular-price"> <span class="price">$125.00</span>
+                              <div class="price-box"> <span class="regular-price"> <span class="price">{{ item.promotionPrice| currency : "VND"}}</span>
                                 </span> </div>
                             </div>
                             <div class="pro-action">
-                              <button type="button" class="add-to-cart"><span> Add to Cart</span> </button>
+                              <button (click)="addToShopingCard(item)" type="button" class="add-to-cart"><span> Thêm giỏ hàng</span> </button>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </li>
-                <li class="menu-item depth-1 product menucol-1-3 withimage">
-                  <div class="product-item">
-                    <div class="item-inner">
-                      <div class="product-thumbnail">
-                        <div class="icon-sale-label sale-left">Sale</div>
-                        <div class="pr-img-area"> <a title="Product title here" [routerLink]="['/chi-tiet']">
-                            <figure> <img class="first-img" src="./../assets/images/products/product-1.jpg"
-                                alt="html Template"> <img class="hover-img"
-                                src="./../assets/images/products/product-1.jpg" alt="html Template"></figure>
-                          </a> </div>
-                        <div class="pr-info-area">
-                          <div class="pr-button">
-                            <div class="mt-button add_to_wishlist"> <a href="wishlist.html"> <i class="fa fa-heart"></i>
-                              </a> </div>
-                            <div class="mt-button add_to_compare"> <a href="compare.html"> <i class="fa fa-signal"></i>
-                              </a> </div>
-                            <div class="mt-button quick-view"> <a href="quick_view.html"> <i class="fa fa-search"></i>
-                              </a> </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="item-info">
-                        <div class="info-inner">
-                          <div class="item-title"> <a title="Product title here" [routerLink]="['/chi-tiet']">Product
-                              title here </a> </div>
-                          <div class="item-content">
-                            <div class="rating"> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i
-                                class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i>
-                            </div>
-                            <div class="item-price">
-                              <div class="price-box"> <span class="regular-price"> <span class="price">$125.00</span>
-                                </span> </div>
-                            </div>
-                            <div class="pro-action">
-                              <button type="button" class="add-to-cart"><span> Add to Cart</span> </button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </li>
-                <li class="menu-item depth-1 product menucol-1-3 withimage">
-                  <div class="product-item">
-                    <div class="item-inner">
-                      <div class="icon-sale-label sale-left">Sale</div>
-                      <div class="icon-new-label new-right">New</div>
-                      <div class="product-thumbnail">
-                        <div class="icon-sale-label sale-left">Sale</div>
-                        <div class="pr-img-area"> <a title="Product title here" [routerLink]="['/chi-tiet']">
-                            <figure> <img class="first-img" src="./../assets/images/products/product-1.jpg"
-                                alt="html Template"> <img class="hover-img"
-                                src="./../assets/images/products/product-1.jpg" alt="html Template"></figure>
-                          </a> </div>
-                        <div class="pr-info-area">
-                          <div class="pr-button">
-                            <div class="mt-button add_to_wishlist"> <a href="wishlist.html"> <i class="fa fa-heart"></i>
-                              </a> </div>
-                            <div class="mt-button add_to_compare"> <a href="compare.html"> <i class="fa fa-signal"></i>
-                              </a> </div>
-                            <div class="mt-button quick-view"> <a href="quick_view.html"> <i class="fa fa-search"></i>
-                              </a> </div>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="item-info">
-                        <div class="info-inner">
-                          <div class="item-title"> <a title="Product title here" [routerLink]="['/chi-tiet']">Product
-                              title here </a> </div>
-                          <div class="item-content">
-                            <div class="rating"> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i
-                                class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i>
-                            </div>
-                            <div class="item-price">
-                              <div class="price-box"> <span class="regular-price"> <span class="price">$125.00</span>
-                                </span> </div>
-                            </div>
-                            <div class="pro-action">
-                              <button type="button" class="add-to-cart"><span> Add to Cart</span> </button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </li>
+                </li>               
               </ul>
             </li>
             <li></li>
@@ -299,4 +216,5 @@
     </div>
   </div>
 </nav>
+<app-quick-view (sendEventToParent)="listenEventFromChild($event)" *ngIf="isShowQuickView" productSlug="{{this.productSlugToChild}}"></app-quick-view>
 <ngx-spinner [fullScreen] = "true" type="ball-scale-multiple" bdColor="rgba(220, 237, 255, 0.8)" color="#0b499c"></ngx-spinner>
