--- a/src/app/product-grid/product-grid.component.css
+++ b/src/app/product-grid/product-grid.component.css
@@ -102,3 +102,8 @@
         display: none !important;
     }
  }
+ @media screen and (max-width: 600px) {
+    .div-to-hide-mobile {
+        display: none;
+    }
+}
