--- a/src/app/product-grid/product-grid.component.html
+++ b/src/app/product-grid/product-grid.component.html
@@ -236,7 +236,7 @@
               </ol>
               
               <!-- Wrapper for slides -->
-              <div class="carousel-inner" role="listbox">
+              <div class="carousel-inner div-to-hide-mobile" role="listbox">
                 <div class="item active"> <img src="../../assets/images/image-manhinh-banner.jpg" alt="banner"/> 
                   <div class="carousel-caption">
                     <h3><a [routerLink]="['/chi-tiet']"  title=" Sample Product">Sale Up to 50% off</a></h3>
@@ -296,7 +296,7 @@
             </div>
           </div>
        
-          <div class="offer-banner"><img src="../../assets/images/image-banner.jpg" alt="banner"></div>
+          <div class="offer-banner div-to-hide-mobile"><img src="../../assets/images/image-banner.jpg" alt="banner"></div>
         </aside>
       </div>
     </div>
