--- a/src/app/menu-top/menu-top.component.html
+++ b/src/app/menu-top/menu-top.component.html
@@ -57,12 +57,12 @@
         <div class="mtmegamenu">
           <ul class="hidden-xs">
             <li class="mt-root demo_custom_link_cms">
-              <div class="mt-root-item"><a [routerLink]="['/']">
+              <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['']">
                   <div class="title title_font"><span class="title-text">Home</span></div>
                 </a></div>
             </li>
             <li class="mt-root">
-              <div class="mt-root-item"><a href="#">
+              <div class="mt-root-item"><a  href="#">
                   <div class="title title_font"><span class="title-text">Categories</span></div>
                 </a></div>
               <ul class="menu-items col-xs-12">
@@ -129,17 +129,17 @@
               </ul>
             </li>
             <li class="mt-root">
-              <div class="mt-root-item"><a [routerLink]="['/gioi-thieu']">
+              <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/gioi-thieu']">
                   <div class="title title_font"><span class="title-text">New Arrivals</span> </div>
                 </a></div>
             </li>
             <li class="mt-root">
-              <div class="mt-root-item"><a [routerLink]="['/gioi-thieu']">
+              <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/gioi-thieu']">
                   <div class="title title_font"><span class="title-text">Giới thiệu</span></div>
                 </a></div>
             </li>
             <li class="mt-root demo_custom_link_cms">
-              <div class="mt-root-item"><a [routerLink]="['/tin-tuc']">
+              <div class="mt-root-item"><a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" [routerLink]="['/tin-tuc']">
                   <div class="title title_font"><span class="title-text">Tin tức</span></div>
                 </a></div>
               <ul class="menu-items col-md-3 col-sm-4 col-xs-12" style="top: 28px; left: 402.531px;">
