--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3909,7 +3909,7 @@ transition:all .3s ease-in-out 0s
 	border-color: #e83f33
 }
 .mtmegamenu a.active .title.title_font span {
-	color: #bff9d8
+	color: #6e0b04
 }
 .custom-menu-bottom img {
 	float: left;
