--- a/src/scroll-top/scrollTop.component.css
+++ b/src/scroll-top/scrollTop.component.css
@@ -3,8 +3,8 @@
   bottom: 15px;
   right: 30px;
   z-index: 2000;
-
-  button {
+}
+ /* button {
     cursor: pointer;
     min-width: 30px;
     width: 40px;
@@ -12,5 +12,5 @@
     border-radius: 50%;
     background-color: #004f93;
     background-color:#ff7918 !important;
-  }
-}
+  } */
+
